#257 use stream.tolist instead of collect (#258)